<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#56AEB9"
    tools:context=".Data.ClickItem.DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/title"
                android:textColor="#3C3B3B"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_name_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="10dp"
                android:maxLines="2"
                android:text="@string/hotel_hlison_hlison"
                android:textColor="#2B2323"
                android:textSize="22sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/location"
                android:textColor="#3C3B3B"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Location_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="13dp"
                android:maxLines="2"
                android:text="@string/hotel_hlison_hlison"
                android:textColor="#2B2323"
                android:textSize="22sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textColor="#3C3B3B"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_des_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="15dp"
                android:text="@string/hotel_hlison_hlison"
                android:textColor="#2B2323"
                android:textSize="22sp"
                android:textStyle="italic" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>