<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_register"
    tools:context=".login.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount,UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/tourism"
                android:textColor="#50D0E2"
                android:textSize="69sp"
                android:textStyle="bold"
                tools:ignore="UnusedAttribute" />

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/nameApp"
                android:layout_marginTop="45dp"
                android:contentDescription="TODO"
                android:src="@drawable/add_image"
                tools:ignore="ContentDescription,HardcodedText" />

            <EditText
                android:id="@+id/edt_RegisterName"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_below="@id/image_profile"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="37dp"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="34dp"
                android:layout_marginRight="34dp"
                android:backgroundTint="#03A9F4"
                android:drawableStart="@drawable/ic_person"
                android:gravity="center"
                android:hint="Your Name"
                android:inputType="textPersonName"
                android:textColor="#EBEAEA"
                android:textColorHint="#EBEAEA"
                android:textSize="21sp"
                tools:ignore="Autofill,HardcodedText,RtlCompat,RtlHardcoded,UnusedAttribute" />

            <EditText
                android:id="@+id/edt_RegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_below="@id/edt_RegisterName"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="37dp"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="34dp"
                android:layout_marginRight="34dp"
                android:backgroundTint="#03A9F4"
                android:drawableStart="@drawable/ic_send"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#EBEAEA"
                android:textColorHint="#EBEAEA"
                android:textSize="21sp"
                tools:ignore="Autofill,RtlCompat,RtlHardcoded,UnusedAttribute" />

            <EditText
                android:id="@+id/edt_RegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_below="@id/edt_RegisterEmail"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="37dp"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="34dp"
                android:layout_marginRight="34dp"
                android:backgroundTint="#03A9F4"
                android:drawableStart="@drawable/ic_lock_pass"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#EBEAEA"
                android:textColorHint="#EBEAEA"
                android:textSize="21sp"
                tools:ignore="Autofill,RtlCompat,RtlHardcoded,UnusedAttribute" />

            <Button
                android:id="@+id/btn_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_RegisterPassword"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="77dp"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="74dp"
                android:layout_marginRight="34dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/back_login"
                android:text="@string/join_us"
                android:textColor="#CDCDE0"
                android:textSize="24sp"
                android:clickable="true"
                android:focusable="true"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>